[project]
name = "AdDownloader"
# $ pip install AdDownloader
# And where it will live on PyPI: https://pypi.org/project/AdDownloader/

version = "0.2.3"
authors = [
  {name = "Paula-Alexandra Gitu", email = "paula.gitu@maastrichtuniversity.nl"},
]
maintainers = [
  {name = "Paula-Alexandra Gitu", email = "paula.gitu@maastrichtuniversity.nl"} # Optional
]

# the description corresponds to the "Summary" metadata field:
description = "A cmd tool for downloading ads and their media content from the Meta Ad Library."
readme = "README.md"
requires-python = "==3.9.*"
license = {file = "LICENSE.txt"}
keywords = ["CLI tool", "MetaAPI", "AdLibrary", "image scraping"]  # Optional

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

# add the necessary packages here
dependencies = [
  "click==8.1.3",
  "dash==2.15.0",
  "datetime==5.4",
  "gensim==4.3.2",
  "meson==1.3.1",
  "ninja==1.11.1.1",
  "nltk==3.8.1",
  "numpy==1.26.4",
  "opencv-python==4.9.0.80",
  "openpyxl==3.1.2",
  "pandas==2.0.3",
  "pillow==10.2.0",
  "prompt_toolkit==1.0.14",
  "PyInquirer==1.0.3",
  "pytest>=6.2.4",
  "requests==2.31.0",
  "rich==13.6.0",
  "selenium==4.16.0",
  "setuptools>=43.0.0",
  "textblob==0.17.1",
  "typer==0.9.0",
  "wordcloud==1.9.3",
]


[project.urls]
Homepage = "https://github.com/Paularossi/AdDownloader"
Issues = "https://github.com/Paularossi/AdDownloader/issues"

[project.scripts]  # Optional
AdDownloader = "AdDownloader.cli:main"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data", "dist", "docs", "tests", "venv"]
namespaces = false
